Many UI Changes in Source Page of Project Wizard

Besides tackling bug 283616 many other changes like disabling the
controls in the source page after the project is fetched, disabling the
next button until the project is fetched and removing the source page
from the wizard if it's not a fetch wizard.
BUG: 283616
FIXED-IN: 4.3
REVIEW: 102808